--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -1,9 +1,16 @@
 @import "/src/assets/styles/variables.less";
 @import "/src/assets/styles/theme.less";
 @url-download-client:    url(../../shared/message-utils/icons/ic_portal_app.svg);
+@settings-icon: url(src/app/components/header/icons/ic_portal_settings.svg);
+
+@import "src/app/components/header/styles/view-header.less";
+
+@media only screen and (min-width: 800px) {
+  @import "src/app/components/header/styles/desktop-view-header.less";
+}
 
 .header-wrapper {
-  background: @header;
+
   height: auto;
   min-height: 34px;
   padding: 0 0 0 30px;
@@ -145,94 +152,94 @@
 
   }
 }
-
-.browser-notifications-container {
-  width: ~"calc(100% + 30px)";
-  margin: 0 0 0 -30px;
-  font-size: 13px;
-  color: #fff;
-}
-
-.browser-supporting {
-  display: block;
-  width: 100%;
-  height: 40px;
-  background-color: @dark-desaturated-blue;
-  text-align: center;
-  line-height: 40px;
-
-  .underline {
-    text-decoration: underline;
-  }
-}
-
-.browser-exclusion {
-  display: block;
-  width: 100%;
-  height: 45px;
-  background-color: @dark-desaturated-blue;
-  text-align: center;
-  line-height: 20px;
-  padding-top: 3px;
-
-  .underline {
-    text-decoration: underline;
-  }
-}
-
-.rollover-container {
-  margin-left: -30px;
-
-  &:empty {
-    max-height: 0;
-  }
-}
-.administrator-notification-container {
-  margin-left: -30px;
-
-  &:empty {
-    max-height: 0;
-  }
-
-  .message {
-    position: relative;
-    background: @dark-desaturated-blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 40px;
-    line-height: 30px;
-    padding: 5px 0;
-    letter-spacing: 0.2px;
-    overflow: hidden;
-    padding-right: 50px;
-    span {
-      text-align: center;
-      color: @white;
-    }
-
-    a{
-      color: @white;
-    }
-
-    .confirm {
-      margin-left: 10px;
-      padding: 0 20px;
-      background: @focus;
-      border-radius: 100px;
-      cursor: pointer;
-    }
-
-    .equinox-icon{
-      background-image: @url-download-client;
-      width: 30px;
-      height: 30px;
-      margin-right: 20px;
-      margin-left: 20px;
-      background-repeat: no-repeat;
-      min-width: 30px;
-    }
-  }
-}
+//
+//.browser-notifications-container {
+//  width: ~"calc(100% + 30px)";
+//  margin: 0 0 0 -30px;
+//  font-size: 13px;
+//  color: #fff;
+//}
+//
+//.browser-supporting {
+//  display: block;
+//  width: 100%;
+//  height: 40px;
+//  background-color: @dark-desaturated-blue;
+//  text-align: center;
+//  line-height: 40px;
+//
+//  .underline {
+//    text-decoration: underline;
+//  }
+//}
+//
+//.browser-exclusion {
+//  display: block;
+//  width: 100%;
+//  height: 45px;
+//  background-color: @dark-desaturated-blue;
+//  text-align: center;
+//  line-height: 20px;
+//  padding-top: 3px;
+//
+//  .underline {
+//    text-decoration: underline;
+//  }
+//}
+//
+//.rollover-container {
+//  margin-left: -30px;
+//
+//  &:empty {
+//    max-height: 0;
+//  }
+//}
+//.administrator-notification-container {
+//  margin-left: -30px;
+//
+//  &:empty {
+//    max-height: 0;
+//  }
+//
+//  .message {
+//    position: relative;
+//    background: @dark-desaturated-blue;
+//    display: flex;
+//    justify-content: center;
+//    align-items: center;
+//    min-height: 40px;
+//    line-height: 30px;
+//    padding: 5px 0;
+//    letter-spacing: 0.2px;
+//    overflow: hidden;
+//    padding-right: 50px;
+//    span {
+//      text-align: center;
+//      color: @white;
+//    }
+//
+//    a{
+//      color: @white;
+//    }
+//
+//    .confirm {
+//      margin-left: 10px;
+//      padding: 0 20px;
+//      background: @focus;
+//      border-radius: 100px;
+//      cursor: pointer;
+//    }
+//
+//    .equinox-icon{
+//      background-image: @url-download-client;
+//      width: 30px;
+//      height: 30px;
+//      margin-right: 20px;
+//      margin-left: 20px;
+//      background-repeat: no-repeat;
+//      min-width: 30px;
+//    }
+//  }
+//}
 
 
