--- a/src/app/components/navigator/navigator.component.html
+++ b/src/app/components/navigator/navigator.component.html
@@ -1,5 +1,24 @@
-<ul>
-  <li><a routerLink="">Meet now</a></li>
-  <li><a routerLink="/recording">Recording</a></li>
-  <li><a routerLink="/schedule">Schedule</a></li>
-</ul>
+<!--<ul>-->
+<!--  <li><a routerLink="">Meet now</a></li>-->
+<!--  <li><a routerLink="/recording">Recording</a></li>-->
+<!--  <li><a routerLink="/schedule">Schedule</a></li>-->
+<!--</ul>-->
+
+<nav>
+  <a routerLinkActive="current" routerLink="" class="nav-link meet-now {{browser === 'MS-Edge' ? 'edge' : ''}}"
+     [routerLinkActiveOptions]="{exact: true}">
+    <span class="svg-container meet-now"></span>
+    <!--  <ng-include src=":: 'app/components/navigation/icons/meet_now.svg'"></ng-include>-->
+    <p>{{'NAVIGATION.JOIN' | translate}}</p>
+  </a>
+  <a routerLinkActive="current" routerLink="/recording" *ngIf="this.userSettingsService.portalResources.assrUrl" class="nav-link">
+    <span class="svg-container recording"></span>
+    <!--  <ng-include src=":: 'assets/icons/recordings.svg'"></ng-include>-->
+    <p>{{'NAVIGATION.RECORDING' | translate}}</p>
+  </a>
+  <a routerLinkActive="current" routerLink="/schedule" *ngIf="authorizationService.userType==='SIGN_IN'" class="nav-link">
+    <span class="svg-container schedule"></span>
+    <!--  <ng-include src=":: 'assets/icons/schedule.svg'"></ng-include>-->
+    <p>{{'NAVIGATION.SCHEDULE' | translate}}</p>
+  </a>
+</nav>
